--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1>New g3 Architects</h1>
+    <header>
+      <nav>
+        <h2 class="logo">G3 Architects</h2>
+        <ul>
+          <li><a href="">Home </a></li>
+          <li><a href="">About </a></li>
+          <li><a href="">Contact Us </a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+      <div class="banner_content_container">
+        <h1 class="banner_title">
+          Brand New <br />
+          Group of Architects
+        </h1>
+        <p class="banner_description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in <br />
+          some form, by injected humour, or randomised words which don't look
+          even
+        </p>
+        <button class="btn_primary">Explore More</button>
+      </div>
+      <img src="images/banner.png" alt="" />
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
