--- a/index.html
+++ b/index.html
@@ -32,7 +32,80 @@
       </div>
       <img src="images/banner.png" alt="" />
     </header>
-    <main></main>
+    <main>
+      <!-- Quick List section start -->
+
+      <section class="quick_list">
+        <div class="quick_list_img_container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="quick_list_info_container">
+          <h3 class="section_title">
+            <span class="text_gray">Quick list</span> of Our <br />
+            <span class="text_primary">Features</span>
+          </h3>
+          <p class="section_description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn_primary">Explore More</button>
+        </div>
+      </section>
+      <!-- Quick List section end -->
+
+      <!-- Features section start -->
+
+      <section class="features">
+        <div>
+          <h3 class="section_title">Features you will love & enjoy</h3>
+          <p class="section_description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <div class="feature_card">
+            <h4 class="feature_sub_title">Dexktop & Mobile Version</h4>
+            <p class="section_description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature_card">
+            <h4 class="feature_sub_title">Drag & Drop Builder</h4>
+            <p class="section_description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised............
+            </p>
+          </div>
+          <div class="feature_card">
+            <h4 class="feature_sub_title">Awesome Modern Design</h4>
+            <p class="section_description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature_card">
+            <h4 class="feature_sub_title">Super Easy to Edit</h4>
+            <p class="section_description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+        </div>
+        <div class="feature_img">
+          <img src="images/architect.png" alt="" />
+        </div>
+      </section>
+      <!-- Features section end -->
+    </main>
     <footer></footer>
   </body>
 </html>
