--- a/index.html
+++ b/index.html
@@ -105,7 +105,64 @@
         </div>
       </section>
       <!-- Features section end -->
+
+      <!-- Facts section start -->
+
+      <section class="some_facts">
+        <h3 class="section_title">Some Facts</h3>
+        <p class="section_description">
+          There are many variations of passages of Lorem Ipsum available, but
+          <br />
+          the majority have suffered alteration.
+        </p>
+        <div class="some_facts_card_container">
+          <div class="some_facts_card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h3>54</h3>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="some_facts_card">
+            <img src="images/icons/projects.png" alt="" />
+            <h3>1458</h3>
+            <p>Project Finished</p>
+          </div>
+          <div class="some_facts_card">
+            <img src="images/icons/customers.png" alt="" />
+            <h3>590</h3>
+            <p>Clients Worked</p>
+          </div>
+          <div class="some_facts_card">
+            <img src="images/icons/email.png" alt="" />
+            <h3>22578</h3>
+            <p>Email Send</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Facts section end -->
+
+      <!-- sponsor section start -->
+
+      <section class="sponsors">
+        <h3 class="section_title">Our Sponspors</h3>
+        <p class="section_description">
+          There are many variations of passages of Lorem Ipsum available, but
+          <br />
+          the majority have suffered alteration.
+        </p>
+        <div class="sponsors_container">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
+
+      <!-- sponsor section end -->
     </main>
-    <footer></footer>
+    <footer>
+      <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
   </body>
 </html>
